Title aligned center BUG Fix

--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -48,6 +48,7 @@ body{
 .table .title-first{
  text-align: center;
  justify-content: center;
+ color: green;
 }
 /* Add responsiveness - will automatically display the navbar vertically instead of horizontally on screens less than 500 pixels */
 @media screen and (max-width: 500px) {
